# Property_Manager

./: .gitignore  README.md  alembic.ini  competitive_plan.md  data_processing.md  new_changes.md  precommit.ps1  project_plan.md  pyproject.toml
.github/workflows/: scrape_airbnb.yml
api/: dependencies.py
api/routes/: cleaners.py  demand.py  listings.py  pricing.py  signals.py
app/: lifespan.py  main.py
config/: development.yaml  production.yaml  testing.yaml
core/: constants.py  logging.py  settings.py
docker/: Dockerfile  docker-compose.yml
domain/models/: booking.py  cleaner.py  event.py  listing.py
domain/value_objects/: location.py  price.py
infrastructure/database/: models.py  repository.py  session.py
infrastructure/events/: event_client.py
infrastructure/scraping/: airbnb_scraper.py  booking_scraper.py  browser.py  models.py
infrastructure/weather/: weather_client.py
ml/feature_engineering/: demand_features.py  feature_builder.py
scripts/: _check_db.py  bootstrap_region.py  ingest_weather.py  run_scraper.py  scrape_availability.py  scrape_listings.py  scrape_prices.py  seed_data.py
services/: booking_service.py  cleaning_service.py  demand_service.py  market_analysis_service.py  pricing_service.py  similarity_service.py  weather_feature_service.py
tests/: test_booking_models.py  test_demand.py  test_demand_features_extended.py  test_domain.py  test_market_analysis.py  test_pricing.py  test_similarity.py  test_weather_features.py
workers/: feature_pipeline.py  price_update_worker.py  scraper_worker.py  training_worker.py
(+10 files in other folders)
